objects/FINS_CoverageTeam__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Coverage Teams</relationshipLabel>
        <relationshipName>Coverage_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Banker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Banker</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Connections</relationshipLabel>
        <relationshipName>Coverage_Team</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Coverage_Role__c</fullName>
        <label>Coverage Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ECM</fullName>
                </value>
                <value>
                    <fullName>Coverage Banker</fullName>
                </value>
                <value>
                    <fullName>Investment Grade</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Coverage Team</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AP-{000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Coverage Team</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>